# ray-tracing-rs

./: .gitignore  Cargo.toml  README.md  bors.toml  clippy.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
ray-tracing/: Cargo.toml
ray-tracing/src/: camera.rs  gpu.rs  main.rs
ray-tracing/src/hittable/: aabb.rs  aarect.rs  box.rs  bvh.rs  constant_medium.rs  hittable_list.rs  mod.rs  moving_sphere.rs  sphere.rs
shaders/shader/: Cargo.toml
shaders/shader/src/: lib.rs  util.rs
src/: aabb.rs  aarect.rs  box.rs  bvh.rs  camera.rs  cli.rs  color.rs  hittable.rs  hittable_list.rs  main.rs  material.rs  moving_sphere.rs  perlin.rs  prelude.rs  ray.rs  scene.rs  sphere.rs  texture.rs  types.rs  utils.rs  vec3.rs
src/hittable/: aabb.rs  aarect.rs  box.rs  bvh.rs  constant_medium.rs  hittable_list.rs  mod.rs  moving_sphere.rs  sphere.rs
the-rest/: Cargo.toml
the-rest/src/: main.rs
