[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.23", default-features = false, features = ["png"] }
glam = "0.17"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.5.1"
crossbeam = "0.8.1"
clap = "2.33"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 2

[profile.release]
lto = true
