[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
glam = "0.22"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.6.0"
crossbeam = "0.8.2"
clap = "4.0"
num_cpus = "1.13.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 2

[profile.release]
lto = false

[features]
default = ["f64"]
f32 = []
f64 = []
f32-simd = []
