[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.23", default-features = false, features = ["png", "jpeg"] }
glam = { version = "0.16", features = ["bytemuck"] }
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.5.1"
crossbeam = "0.8.1"
clap = "2.33"
num_cpus = "1.13.0"
maligog = { path = "../../maligog" }
bytemuck = { version = "1.7.0", features = ["derive"] }
maplit = "1.0"
ordered-float = "2.5.1"
exr = "1.3.0"
winit = "0.25"

[dependencies.spirv-builder]
git = "https://github.com/EmbarkStudios/rust-gpu"
rev = "f224b5aa1a5e73d0128d23d4bb75b8c23911f180"
features = ["use-installed-tools", "watch"]
default-features = false


[features]
default = ["f32"]
f32 = []
f64 = []
f32-simd = []
